# Client

./: .clang-format  .gitignore  CMakeLists.txt  compile  r-type_client
assets/data/: connect.papaya  help.txt  settings.papaya
assets/lang/: en.json  fr.json
include/: RType.hpp
include/GradeDe/: Color.hpp  Error.hpp  Event.hpp  GradeDe.hpp  Includes.hpp  JoyStick.hpp  KeyBoard.hpp  Mouse.hpp  Shape.hpp  Texture.hpp  Time.hpp  Vector.hpp  Window.hpp
lib/gradeDe/: CMakeLists.txt
lib/gradeDe/include/GradeDe/: Color.hpp  Error.hpp  Event.hpp  Font.hpp  FrameRate.hpp  JoyStick.hpp  KeyBoard.hpp  Mouse.hpp  Music.hpp  RectangleShape.hpp  Shape.hpp  Sound.hpp  Text.hpp  Texture.hpp  Time.hpp  Vector.hpp  Vertex.hpp  VertexArray.hpp  Window.hpp
lib/gradeDe/src/: Color.cpp  Event.cpp  Font.cpp  JoyStick.cpp  KeyBoard.cpp  Mouse.cpp  RectangleShape.cpp  Shape.cpp  Sound.cpp  Text.cpp  Texture.cpp  Time.cpp  Vector.cpp  Vertex.cpp  Window.cpp
lib/papaya/: CMakeLists.txt
lib/papaya/include/: Papaya.hpp
lib/papaya/src/: Papaya.cpp  PapayaError.cpp  PapayaPrivate.cpp
lib/rfcArgParser/: CMakeLists.txt
lib/rfcArgParser/include/: rfcArgParser.hpp
lib/rfcArgParser/src/: rfcArgParser.cpp
lib/traductor/: CMakeLists.txt
lib/traductor/include/: Traductor.hpp
lib/traductor/src/: Error.cpp  Traductor.cpp  TraductorElement.cpp
src/: main.cpp
src/Communication/Client/: Client.cpp  Client.hpp  CommunicationClient.cpp  CommunicationClient.hpp
src/Communication/Commands/: Commands.cpp  Commands.hpp
src/Communication/SendList/: SendList.cpp  SendList.hpp
src/Display/Audio/MusicManager/: MusicManager.cpp  MusicManager.hpp
src/Display/Client/: DisplayClient.cpp  DisplayClient.hpp
src/Display/Components/StarsBackground/: StarsBackground.cpp  StarsBackground.hpp
src/Display/Enemy/: Enemy.cpp  Enemy.hpp
src/Display/Player/: Player.cpp  Player.hpp
src/Display/Scene/Base/: AScene.cpp  AScene.hpp  IScene.hpp
src/Display/Scene/SceneManager/: SceneManager.cpp  SceneManager.hpp
src/Display/Scene/Scenes/Game/: GameScene.cpp  GameScene.hpp
src/Display/Scene/Scenes/Menu/: MenuScene.cpp  MenuScene.hpp
src/Display/Scene/Scenes/TEMPLATE/: TEMPLATEScene.cpp  TEMPLATEScene.hpp
src/Display/Shoot/: Shoot.cpp  Shoot.hpp
src/Game/Audio/MusicManager/: MusicManager.cpp  MusicManager.hpp
src/Game/Client/: GameClient.cpp  GameClient.hpp
src/Game/Components/Base/: AComponent.cpp  AComponent.hpp  IComponent.hpp
src/Game/Components/EndIndicator/: EndIndicator.cpp  EndIndicator.hpp
src/Game/Components/Entity/Base/: AEntity.cpp  AEntity.hpp  IEntity.hpp
src/Game/Components/Entity/Enemy/: Enemy.cpp  Enemy.hpp
src/Game/Components/Entity/Player/: Player.hpp
src/Game/Components/Entity/Shoot/: Shoot.hpp
src/Game/Components/Entity/Star/: Star.cpp  Star.hpp
src/Game/Components/NumPad/: NumPad.cpp  NumPad.hpp
src/Game/Components/Range/: Range.cpp  Range.hpp
src/Game/Components/RoomGameSlot/: RoomGameSlot.cpp  RoomGameSlot.hpp
src/Game/Components/SectionRange/: SectionRange.cpp  SectionRange.hpp
src/Game/Components/StarRating/: StarRating.cpp  StarRating.hpp
src/Game/Components/StarsBackground/: StarsBackground.cpp  StarsBackground.hpp
src/Game/Components/Text/: Text.cpp  Text.hpp
src/Game/Components/TextBox/: TextBox.cpp  TextBox.hpp
src/Game/Components/WaveIndicators/: WaveIndicators.cpp  WaveIndicators.hpp
src/Game/Components/WaveNotif/: WaveNotif.cpp  WaveNotif.hpp
src/Game/Enemy/: Enemy.cpp  Enemy.hpp
src/Game/Entity/Base/: AEntity.cpp  AEntity.hpp  IEntity.hpp
src/Game/Entity/Enemy/: Enemy.cpp  Enemy.hpp
src/Game/Entity/Player/: Player.cpp  Player.hpp
src/Game/Entity/SelectArrow/: SelectArrow.cpp  SelectArrow.hpp
src/Game/Entity/Shoot/: Shoot.cpp  Shoot.hpp
src/Game/Managers/Accessibility/: AccessibilityManager.cpp  AccessibilityManager.hpp
src/Game/Managers/Font/: FontManager.cpp  FontManager.hpp
src/Game/Managers/Music/: Music.cpp  Music.hpp
src/Game/Managers/Resolution/: ResolutionManager.cpp  ResolutionManager.hpp
src/Game/Managers/Scenes/: Scenes.cpp  Scenes.hpp
src/Game/Managers/Sound/: Sound.cpp  Sound.hpp
src/Game/Player/: Player.cpp  Player.hpp
src/Game/Scene/Base/: AScene.cpp  AScene.hpp  IScene.hpp
src/Game/Scene/SceneManager/: SceneManager.cpp  SceneManager.hpp
src/Game/Scene/Scenes/Game/: GameScene.cpp  GameScene.hpp
src/Game/Scene/Scenes/Menu/: MenuScene.cpp  MenuScene.hpp
src/Game/Scenes/Base/: AScene.cpp  AScene.hpp  IScene.hpp
src/Game/Scenes/Base/MiniScene/: AMiniScene.cpp  AMiniScene.hpp  IMiniScene.hpp
src/Game/Scenes/Game/: GameScene.cpp  GameScene.hpp
src/Game/Scenes/JoinRoom/: JoinRoom.cpp  JoinRoom.hpp
src/Game/Scenes/Menu/: MenuScene.cpp  MenuScene.hpp
src/Game/Scenes/RoomsList/: RoomsListScene.cpp  RoomsListScene.hpp
src/Game/Scenes/Settings/: SettingsScene.cpp  SettingsScene.hpp
src/Game/Scenes/Settings/MiniScene/Accessibility/: AccessibilityMiniScene.cpp  AccessibilityMiniScene.hpp
src/Game/Scenes/Settings/MiniScene/General/: GeneralMiniScene.cpp  GeneralMiniScene.hpp
src/Game/Scenes/Settings/MiniScene/Graphics/: GraphicsMiniScene.cpp  GraphicsMiniScene.hpp
src/Game/Scenes/WaitingRoom/: WaitingRoom.cpp  WaitingRoom.hpp
src/Game/Shoot/: Shoot.cpp  Shoot.hpp
src/GradeDe/: Color.cpp  Texture.cpp  Window.cpp
src/Graphique/: Graphique.cpp
src/Graphique/GradeDe/: Event.cpp  JoyStick.cpp  Mouse.cpp  Shape.cpp
src/Helpers/Mutex/: Mutex.cpp  Mutex.hpp
src/Helpers/Path/: Path.cpp  Path.hpp
src/Helpers/Thread/: Thread.cpp  Thread.hpp
src/Helpers/Utils/: Utils.cpp  Utils.hpp
src/Parsing/: Parsing.cpp  Parsing.hpp  ParsingError.cpp  ParsingHelp.cpp
src/Ressources/: Ressources.cpp  Ressources.hpp
src/Server/Commands/: Commands.cpp  Commands.hpp
src/Server/Server/: Server.cpp  Server.hpp
src/Server/SharedMemory/: SharedMemory.cpp  SharedMemory.hpp
src/Utils/Mutex/: Mutex.cpp  Mutex.hpp
src/Utils/Thread/: Thread.cpp  Thread.hpp
src/Utils/Utils/: Utils.cpp  Utils.hpp
tests/: CMakeLists.txt  GraphicalTests.cpp
(+4 files in other folders)
